@@ -2,7 +2,7 @@ name    = JTM-Boilerplate
 author  = Joelle Maslak <jmaslak@antelope.net>
 license = Perl_5
 copyright_holder = Joelle Maslak
-copyright_year   = 2015-2019
+copyright_year   = 2015-2020
 main_module      = lib/JTM/Boilerplate.pm
 
 [AutoVersion]
