@@ -2,13 +2,13 @@
 # Yes, we want to make sure things work in taint mode
 
 #
-# Copyright (C) 2015-2017 Joelle Maslak
+# Copyright (C) 2015-2020 Joelle Maslak
 # All Rights Reserved - See License
 #
 
 # Basic testing
 
-use Test::More tests => 12;
+use Test::More tests => 14;
 
 # Instantiate the object
 require_ok('JCM::Boilerplate');
@@ -113,3 +113,65 @@ if ($ret) {
     pass('Invalid regex under strict mode dies');
 }
 
+# Verify indirect mode doesn't work.
+SKIP: {
+    skip "Indirect test only works on >= 5.32", 1 if $PERL_VERSION lt v5.32.0;
+    local $SIG{__WARN__} = sub { };
+
+    $ret = eval '
+        use JTM::Boilerplate;
+
+        package foo {
+            sub new {
+                my $class = shift;
+                return bless {}, $class;
+            }
+            sub testing {
+                my $self = shift;
+                return 1;
+            }
+        }
+
+        my $f = foo->new();
+        testing $f;
+        1;
+    ';
+    if (!defined $ret) {
+        pass('Indirect syntax dies');
+    } else {
+        fail('Indirect syntax passes');
+    }
+}
+
+# Verify ISA does work
+SKIP: {
+    skip "Indirect test only works on >= 5.32", 1 if $PERL_VERSION lt v5.32.0;
+    local $SIG{__WARN__} = sub { };
+
+    $ret = eval '
+        use JTM::Boilerplate;
+
+        package foo {
+            sub new {
+                my $class = shift;
+                return bless {}, $class;
+            }
+            sub testing {
+                my $self = shift;
+                return 1;
+            }
+        }
+
+        my $f = foo->new();
+        if ($f isa foo) {
+            return 1;
+        } else {
+            return 0;
+        }
+    ';
+    if (!defined $ret) {
+        fail('isa not working');
+    } else {
+        pass('isa works');
+    }
+}
