@@ -1,5 +1,7 @@
 {{$NEXT}}
  Joelle Maslak <jmaslak@antelope.net>
+ * Enable "no feature qw(indirect)" on 5.32+
+ * Enable isa operator on 5.32+
  * Upgrade required version of Parallel::WorkUnit
 
 2.190700  2019-03-11 14:11:06-06:00 America/Denver
